add air on both services

--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -2,6 +2,10 @@ FROM golang:1.24.6
 
 WORKDIR /app
 
+# Install Air
+RUN go install github.com/cosmtrek/air@v1.43.0
+ENV PATH="/go/bin:$PATH"
+
 COPY go.mod ./
 RUN go mod tidy
 
@@ -11,4 +15,6 @@ RUN go build -o gateway ./app
 
 EXPOSE 4000
 
-CMD ["./gateway"]
+# Run Air instead of a built binary
+CMD ["air"]
+
