--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -2,13 +2,18 @@ FROM golang:1.24.6
 
 WORKDIR /app
 
-COPY go.mod ./
+# Install Air
+RUN go install github.com/cosmtrek/air@v1.43.0
+ENV PATH="/go/bin:$PATH"
+
+# Copy go mod files first for better cache
+COPY go.mod go.sum ./
 RUN go mod tidy
 
+# Copy source code
 COPY . .
-
-RUN go build -o user ./app
 
 EXPOSE 4001
 
-CMD ["./user"]
+# Run Air instead of the binary
+CMD ["air"]
